--- a/MZRadio/Podfile
+++ b/MZRadio/Podfile
@@ -5,5 +5,6 @@ pod 'KGFloatingDrawer', '~> 0.1.3'
 pod 'KVNProgress', '~> 2.2.1'
 pod 'SwiftyJSON'
 pod 'SDWebImage'
+pod 'AFSoundManager'
 
 use_frameworks!
